# BasicPyVLC

./: .gitignore  LICENSE  README.md  basicpyvlc.py  basicvlc.spec  basicvlcMAC.spec  basicvlcMACBasic.spec  basicvlcMACVLCUninstalled.spec  basicvlcWIN.spec  corrected vlc.py  pyproject.toml
